enershelf/static/sass/layouts/_panel.scss
.panel {
  @extend .d-flex;
  @extend .flex-column;
  @extend .h-auto;
  @extend .shadow;
  overflow-y: scroll;

  @include media-breakpoint-down(lg) {
    width: 100%;
  }

  @include media-breakpoint-up(lg)  {
    height: 100vh;
    width: $panel-width;
  }

  &__content {
    @extend .flex-grow-1;
    @extend .flex-shrink-0;
  }

  &__chart {
    @extend .d-flex;
    @extend .flex-row;
    @extend .justify-content-around;
    @extend .bg-light;
    @extend .pt-2;
  }

  &__settings {
    @extend .px-2;
    @extend .pb-3;
  }

  &-item {
    @extend .pt-4;

    &__heading {
      @extend .fs-7;
      @extend .fw-light;
      @extend .text-uppercase;
    }

    &__form {
      @extend .d-flex;
      @extend .flex-row;
      @extend .align-items-center;
      
      select,
      img {
        @extend .d-block;
      }

      img {
        @extend .ms-1;
        height: $info-icon-size;
        width: $info-icon-size;
      }
    }
  }
}

.footer {
  @extend .flex-shrink-0;
  @extend .border-top;
  @extend .bg-white;
  @extend .position-sticky;
  @extend .bottom-0;
  @extend .w-auto;

  &__btns {
    @extend .d-flex;
    @extend .flex-row;
    @extend .p-2;
    @extend .border-bottom;

    button {
      @extend .w-50;
    }
  }

  &__logos {
    @extend .d-flex;
    @extend .flex-row;
    @extend .text-center;

    .logo--bmbf {
      @extend .text-end;

      img {
        width: 8rem;
      }
    }
  }

  &__logo {
    @extend .flex-fill;

    &--eaa {
      @extend .text-start;
      @extend .ps-2;

      img {
        width: 5rem;
        transform: translateY(40px);
      }
    }

    &--rli {
      @extend .text-center;
      @extend .ps-2;

      img {
        width: 4.5rem;
        transform: translateY(40px);
      }
    }

    &--bmbf {
      @extend .text-end;

      img {
        width: 9rem;
      }
    }
  }

  &__links {
    height: 1.5rem;

    ul {
      @include ul-horizontal;
      @extend .d-flex;
      @extend .flex-row;
      @extend .justify-content-center;
    }
  
    li {
      @extend .d-inline-block;
      @extend .fs-7;
    }
  
    li:not(:last-of-type) {
      @extend .pe-2;
    }
  }
}

